WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273456
AX: Table accessibility text does not update when its caption dynamically changes it descendant text or is removed
https://bugs.webkit.org/show_bug.cgi?id=273456
Summary
AX: Table accessibility text does not update when its caption dynamically cha...
Tyler Wilcock
Reported
2024-04-29 17:40:38 PDT
...
Attachments
Patch
(5.90 KB, patch)
2024-04-29 17:46 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(6.94 KB, patch)
2024-04-29 21:45 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-29 17:40:54 PDT
<
rdar://problem/127263464
>
Tyler Wilcock
Comment 2
2024-04-29 17:46:21 PDT
Created
attachment 471206
[details]
Patch
Tyler Wilcock
Comment 3
2024-04-29 21:45:41 PDT
Created
attachment 471212
[details]
Patch
EWS
Comment 4
2024-04-30 08:02:10 PDT
Committed
278164@main
(3de4518fe489): <
https://commits.webkit.org/278164@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471212
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug