AX: Table accessibility text does not update when its caption dynamically changes it descendant text or is removed https://bugs.webkit.org/show_bug.cgi?id=273456 rdar://127263464

Reviewed by Chris Fleizach.

When the descendants of caption elements change, we need to update the accessibility text of the associated table, as
tables use the caption as a type of label.

* LayoutTests/accessibility/dynamic-table-caption-expected.txt: Added.
* LayoutTests/accessibility/dynamic-table-caption.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleChildrenChanged):

Canonical link: https://commits.webkit.org/278164@main